--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,7 @@
+header, footer {
+    text-align: center;
+}
+
 ul {
     margin: 0;
     /* padding: 0; */
@@ -8,4 +12,42 @@ ul {
 }
 #list span {
     margin: 1rem;
+}
+
+label {
+    text-align: right;
+}
+
+input[type=text] {
+    padding: 0.2rem;
+    margin: 0.2rem;
+}
+
+/* button {
+    border: none;
+    padding: 0.2rem;
+    margin: 0.2rem;
+    background-color: black;
+    color: whitesmoke;
+} */
+
+/* applied to Income / Expense */
+.column {
+    float: left;
+    width: 50%;
+}
+
+footer #info, 
+.half-opacity {
+    opacity: 50%;
+}
+
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.25);
 }
