--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -13,6 +13,9 @@ input[type=text] {
     padding: 0.2rem;
     margin: 0.2rem;
 }
+dialog {
+    border-style: none;
+}
 /* button {
     border: none;
     padding: 0.2rem;
@@ -41,6 +44,9 @@ input[type=text] {
     height: 100vh;
     z-index: 5;
     background-color: rgba(0, 0, 0, 0.25);
+}
+.delete-btn {
+    color: rgba(255, 0, 0, 1);
 }
 /* 
     ids 
