patch ui for v0.0.1

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -122,4 +122,8 @@ button {
 .secondary {
     color: var(--gray65);
     font: var(--default-2);
+
+    sub {
+        vertical-align: middle;
+    }
 }
