--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -69,8 +69,13 @@ button {
 /* # Layout Classes & UI */
 .page-layout {
     display: grid;
-    margin: 0 110px;
+    margin: 0 8.33%;
     padding: 1em;
+}
+@media screen and (min-width: 768px) {
+    .page-layout {
+        margin: 0 16.66%;
+    }
 }
 .columns {
     --col-count: 2, 1fr;
